; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_descrip.c_fp_drop_event.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_descrip.c_fp_drop_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fileproc = type { i32 }

@FP_WAITEVENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fp_drop_event(i32 %0, i32 %1, %struct.fileproc* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.fileproc*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store %struct.fileproc* %2, %struct.fileproc** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @proc_fdlock_spin(i32 %8)
  %10 = load i32, i32* @FP_WAITEVENT, align 4
  %11 = load %struct.fileproc*, %struct.fileproc** %6, align 8
  %12 = getelementptr inbounds %struct.fileproc, %struct.fileproc* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = or i32 %13, %10
  store i32 %14, i32* %12, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* %5, align 4
  %17 = load %struct.fileproc*, %struct.fileproc** %6, align 8
  %18 = call i32 @fp_drop(i32 %15, i32 %16, %struct.fileproc* %17, i32 1)
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @proc_fdunlock(i32 %19)
  %21 = load i32, i32* %7, align 4
  ret i32 %21
}

declare dso_local i32 @proc_fdlock_spin(i32) #1

declare dso_local i32 @fp_drop(i32, i32, %struct.fileproc*, i32) #1

declare dso_local i32 @proc_fdunlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
